fix overflowing ui elements

--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,11 +1,16 @@
 /* custom styling for home page */
 
+html, body {
+    overflow: hidden;
+}
+
 .center-container {
     height: 100%;
     min-height: fit-content;
     display: grid;
     justify-items: center;
     align-items: center;
+    overflow: scroll;
 }
 
 .center-container>div {
